(stemmer) Optimize PorterStemmer
Use StringBuilder instead of raw String concatenation, also hoists some arrays that were being created during stemming.

Result is a 30% speedup and a significant drop in GC churn.